# backtesting.py-metalabel

./: README.md  pyproject.toml  showcase.py
backtester_metalabeling/: enhanced_strategy.py  feature_engineering.py  metalabel_filter.py  metalabeler.py
backtester_metalabeling/models/: base.py  classifiers.py  ensemble.py  logistic_regression.py  random_forrest_classifier.py  svm_classifier.py  xgboost.py
