[project]
name = "backtesting_meta-labeling"
version = "0.1.0"
description = "backtesting_meta-labeling"
authors = [{ name = "Michal Hnatusko", email = "mi.hnatusko@gmail.com" }]
dependencies = [
    "bokeh>=3.7.3",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
]


[tool.ruff]
exclude = [
    '.git',
    '.eggs',
    '__pycache__',
    'doc/examples',
]
ignore = [
    'UP006',
    'UP007',
    'UP009',
    'N802',
    'N806',
    'C901',
    'B008',
    'B011',
    'RUF002',
]
line-length = 100
select = [
    'I',
    'E',
    'F',
    'W',
    'UP',
    'N',
    'C',
    'B',
    'T',
    'RUF',
    'YTT',
]

[tool.ruff.pep8-naming]
ignore-names = [
    'l',
    'h',
]